2014-01-03  Kevin Davidson <tkld@quadstone.com>
	* lisp/bbdb-pgp.el: New file (taken from BBDB 2).

2014-01-03  Roland Winkler  <winkler@gnu.org>
	More flexible editing of xfields.
	* lisp/bbdb.el (bbdb-read-string): Rename optional arg default to
	init.  New optional arg require-match.
	* lisp/bbdb-com.el (bbdb-read-organization)
	(bbdb-record-edit-address, bbdb-completing-read-mails): Rename
	optional arg default to init.
	(bbdb-insert-field): Simplify.
	(bbdb-read-xfield): New function.
	(bbdb-prompt-for-new-field, bbdb-edit-field): Use it.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-init-forms): Add init form for anniv.
	(bbdb-initialize): Update docstring accordingly.
	* lisp/bbdb-anniv.el: Update doc accordingly.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Clean up handling of redundant email addresses.
	* lisp/bbdb.el (bbdb-ignore-redundant-mails): Rename from
	bbdb-canonicalize-redundant-mails, keeping the latter as obsolete
	alias.
	(bbdb-add-mails, bbdb-canonicalize-mail-function): Fix docstring.
	* lisp/bbdb-com.el (bbdb-mail-redundant-re): New function
	(bbdb-delete-redundant-mails): Move here from lisp/bbdb-mua.el.
	Merge with command bbdb-delete-duplicate-mails and make the latter
	an obsolete alias.  New optional args query and update.
	* lisp/bbdb-mua.el (bbdb-annotate-message): Use
	bbdb-mail-redundant-re and bbdb-delete-redundant-mails.
	(bbdb-mail-redundant-p): Remove.
	(bbdb-canonical-hosts): Update docstring.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Check more carefully/frequently that BBDB is editable.
	* lisp/bbdb.el (bbdb-editable): Move here from lisp/bbdb-com.el.
	Revert BBDB buffer if possible.
	* lisp/bbdb.el (bbdb-record-set-field)
	* lisp/bbdb-com.el (bbdb-read-record, bbdb-create-internal)
	(bbdb-merge-records, bbdb-sort-addresses, bbdb-sort-phones)
	(bbdb-sort-xfields)
	* lisp/bbdb-snarf.el (bbdb-snarf): Check that BBDB is editable.
	* lisp/bbdb-mua.el (bbdb-update-records): Obey bbdb-read-only.